--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "main": "postcss.config.js",
   "scripts": {
-    "tw:build": "tailwindcss -c ./tailwind.config.js -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --minify",
-    "tw:watch": "tailwindcss -c ./tailwind.config.js -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview --host",
+    "tw:build": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --minify",
+    "tw:watch": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --watch --minify",
+    "tw:admin:build": "tailwindcss -i ./public/assets/admin/css/input.css -o ./public/assets/admin/css/tailwind.css --minify",
+    "tw:admin:watch": "tailwindcss -i ./public/assets/admin/css/input.css -o ./public/assets/admin/css/tailwind.css --watch --minify",
+    "tw:all:build": "npm run tw:build && npm run tw:admin:build",
+    "tw:all:watch": "concurrently \"npm run tw:watch\" \"npm run tw:admin:watch\""
   },
   "keywords": [],
   "author": "",
@@ -13,23 +19,12 @@
   "description": "",
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.14",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14"
+    "@tailwindcss/vite": "^4.1.14",
+    "concurrently": "^9.2.1",
+    "tailwindcss": "^4.1.14",
+    "vite": "^7.1.10"
   },
   "dependencies": {
-    "baseline-browser-mapping": "^2.8.17",
-    "browserslist": "^4.26.3",
-    "caniuse-lite": "^1.0.30001751",
-    "electron-to-chromium": "^1.5.237",
-    "escalade": "^3.2.0",
-    "fraction.js": "^4.3.7",
-    "nanoid": "^3.3.11",
-    "node-releases": "^2.0.25",
-    "normalize-range": "^0.1.2",
-    "picocolors": "^1.1.1",
-    "postcss-value-parser": "^4.2.0",
-    "source-map-js": "^1.2.1",
-    "update-browserslist-db": "^1.1.3"
+    "gsap": "^3.13.0"
   }
 }
