fix(admin-images): fix image CRUD bugs (MIME/size validation, checksum dedupe, proper blob serving)
- Validate allowed MIME types and 5MB size limit
- Prevent duplicate uploads via checksum in File::upload
- Bind binary data as LOB and serve with correct headers
- Update admin actions/views (demon/pact) for create/edit/delete image
- Refresh admin JS for preview/reset flows
- Rebuild CSS and update package.json as needed

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --host",
-    "tw:build": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --minify",
-    "tw:watch": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --watch --minify",
-    "tw:admin:build": "tailwindcss -i ./public/assets/admin/css/input.css -o ./public/assets/admin/css/tailwind.css --minify",
-    "tw:admin:watch": "tailwindcss -i ./public/assets/admin/css/input.css -o ./public/assets/admin/css/tailwind.css --watch --minify",
+    "tw:build": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --content './public/**/*.{php,html,js}' --content './views/**/*.{php,html}' --minify",
+    "tw:watch": "tailwindcss -i ./public/assets/css/input.css -o ./public/assets/css/tailwind.css --content './public/**/*.{php,html,js}' --content './views/**/*.{php,html}' --watch --minify",
+    "tw:admin:build": "tailwindcss -i ./public/assets/admin/css/input.css -o ./public/assets/admin/css/tailwind.css --content './admin/**/*.{php,html,js}' --content './public/assets/admin/**/*.js' --minify",
+    "tw:admin:watch": "tailwindcss -i ./public/assets/admin/css/input.css -o ./public/assets/admin/css/tailwind.css --content './admin/**/*.{php,html,js}' --content './public/assets/admin/**/*.js' --watch --minify",
     "tw:all:build": "npm run tw:build && npm run tw:admin:build",
     "tw:all:watch": "concurrently \"npm run tw:watch\" \"npm run tw:admin:watch\""
   },
